<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- 禁止重写 -->
    <string name="zfile_sharedElement_pic">zfile_jump_pic</string>
    <!-- 禁止重写 -->
    <string name="zfile_sharedElement_video">zfile_jump_Video</string>

    <!--   下面重写即可自定义   -->
    <string name="zfile_title">File management</string>
    <string name="zfile_menu_down">Finish</string>
    <string name="zfile_menu_search">Search</string>
    <string name="zfile_root_path">Root directory</string>
    <string name="zfile_path">Specify the directory</string>
    <string name="zfile_menu_add_file">New folder</string>
    <string name="zfile_menu_order">Sort by</string>
    <string name="zifle_menu_hidden">Do not show hidden files</string>
    <string name="zfile_menu_show">Show hidden files</string>
    <string name="zfile_sort_title">Sort by</string>
    <string name="zfile_sort_default">&#160;Default (no order)</string>
    <string name="zfile_sort_by_name">&#160;Name</string>
    <string name="zfile_sort_by_time">&#160;Time</string>
    <string name="zfile_sort_by_size">&#160;Size</string>
    <string name="zfile_sort_ss">Order</string>
    <string name="zfile_sort_sx">&#160;Ascending</string>
    <string name="zfile_sort_jx">&#160;Descending</string>
    <string name="zfile_down">Sure</string>
    <string name="zfile_cancel">Cancel</string>
    <string name="zfile_info_title">File details</string>
    <string name="zfile_info_name">File name:</string>
    <string name="zfile_info_type">File type:</string>
    <string name="zfile_info_size">File size:</string>
    <string name="zfile_info_time">Change the time:</string>
    <string name="zfile_info_path">File path:</string>
    <string name="zfile_info_more">Display more</string>
    <string name="zfile_info_duration">Media duration:</string>
    <string name="zfile_info_loadding">Acquiring</string>
    <string name="zfile_info_wh">Aspect ratio:</string>
    <string name="zfile_info_other">Other information:</string>
    <string name="zfile_select_forder">Please select a folder</string>
    <string name="zfile_info_rename">Please enter the file name</string>
    <string name="zifle_rename_title">File rename</string>
    <string name="zfile_pic">Picture</string>
    <string name="zfile_video">Video</string>
    <string name="zfile_txt">Txt</string>
    <string name="zfile_other">Other</string>
    <string name="zfile_loading">Loading</string>
    <string name="zfile_qw_loading" tools:ignore="TypographyEllipsis">File acquisition...</string>
    <string name="zfile_duplicate">Copy_</string>
    <string name="zfile_permission_bad">Permission request failed</string>
    <string name="zfile_11_title">Tips</string>
    <string name="zfile_11_content">To access the file, you need to agree to "Allow access to all file permissions" in order to use it normally!</string>
    <string name="zfile_11_bad">Agree to "Allow access to all file permissions" for normal use!</string>
    <string name="zfile_permission_bad2">You have rejected the permission request. This function is temporarily unavailable. Please continue after agreeing to the permission!</string>
    <string name="zfile_permission_bad3">Reacquire</string>

    <string name="zfile_qq_title">QQ File</string>
    <string name="zfile_we_chart_title">WeChart File</string>
    <string name="zfile_selected_title">Selected %d Files</string>

    <string name="zfile_dialog_delete_content">Are you sure you want to delete it？</string>
    <string name="zfile_dialog_delete">Delete</string>

    <string name="zfile_menu_rename">Rename</string>
    <string name="zfile_menu_copy">Copy</string>
    <string name="zfile_menu_move">Move</string>
    <string name="zfile_menu_delete">Delete</string>
    <string name="zfile_menu_detail">File detail</string>
    <string name="zfile_menu_unzip">Unzip</string>

    <string name="zfile_rename_success">Rename success</string>
    <string name="zfile_rename_fail">Rename fail</string>

    <string name="zfile_menu_open">Open</string>
    <string name="zfile_menu_selected">Selected</string>

    <string name="zfile_dialog_preview">File preview</string>
    <string name="zfile_dialog_preview_tip">This file needs to open a third-party application for preview. Do you want to open the default application?</string>
    <string name="zfile_dialog_open_preview_tip">This file needs to be previewed by a third-party application, and there is no program to open the file type locally. Do you want to open the application store?</string>
    <string name="zfile_dialog_no_store">Your phone currently does not have an app store installed</string>

    <string name="zfile_item_desc_icon">File icon</string>
    <string name="zfile_item_desc_selected">Selected</string>
    <string name="zfile_item_desc_path_icon">Path</string>
    <string name="zfile_item_desc_play">Play</string>
    <string name="zfile_item_desc_image">Image</string>
    <string name="zfile_item_desc_search_icon">Search icon</string>
    <string name="zfile_item_desc_delete_icon">Delete</string>

    <string name="zfile_info_no">None</string>
    <string name="zfile_dialog_rename_hint">Please enter the file name</string>
    <string name="zfile_dialog_add_error">This file already exists</string>
    <string name="zfile_dialog_add_success">Created successfully</string>

    <string name="zfile_dialog_to_root">%s to the root directory</string>
    <string name="zfile_dialog_to_path">%s to %s</string>

</resources>
