<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/zfile_sort_title"
        android:textColor="@color/zfile_file_title" />

    <RadioGroup
        android:id="@+id/zfile_sortGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RadioButton
            android:id="@+id/zfile_sort_by_default"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="true"
            android:text="@string/zfile_sort_default"
            android:textColor="@color/zfile_file_title" />

        <RadioButton
            android:id="@+id/zfile_sort_by_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/zfile_sort_by_name"
            android:textColor="@color/zfile_file_title" />

        <RadioButton
            android:id="@+id/zfile_sort_by_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/zfile_sort_by_time"
            android:textColor="@color/zfile_file_title" />

        <RadioButton
            android:id="@+id/zfile_sort_by_size"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/zfile_sort_by_size"
            android:textColor="@color/zfile_file_title" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/zfile_sequenceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="@dimen/zfile_default_divider_padding"
            android:paddingRight="20dp"
            android:paddingBottom="@dimen/zfile_default_divider_padding"
            android:text="@string/zfile_sort_ss"
            android:textColor="@color/zfile_file_title"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/zfile_sequenceGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <RadioButton
                android:id="@+id/zfile_sequence_asc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:checked="true"
                android:text="@string/zfile_sort_sx"
                android:textColor="@color/zfile_file_title" />

            <RadioButton
                android:id="@+id/zfile_sequence_desc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/zfile_sort_jx"
                android:textColor="@color/zfile_file_title" />

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/zfile_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <Button
            android:id="@+id/zfile_dialog_sort_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/zfile_cancel"
            android:textColor="@color/permission_btn_back" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/zfile_line_color" />

        <Button
            android:id="@+id/zfile_dialog_sort_down"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/zfile_down"
            android:textColor="@color/permission_btn_back" />

    </LinearLayout>

</LinearLayout>