<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/zfile_dialog_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/zfile_dialog_tv_title"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/zifle_rename_title"
        android:textColor="@color/zfile_file_title" />

    <EditText
        android:id="@+id/zfile_dialog_renameEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/zfile_info_rename"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:textColor="@color/zfile_black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/zfile_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zfile_dialog_rename_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/zfile_cancel"
            android:textColor="@color/permission_btn_back" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/zfile_line_color" />

        <Button
            android:id="@+id/zfile_dialog_rename_down"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/zfile_down"
            android:textColor="@color/permission_btn_back" />

    </LinearLayout>

</LinearLayout>