<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/zfile_dialog_shape"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/permission_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/zfile_title_selected"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="标题" />

    <TextView
        android:id="@+id/permission_tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        android:textColor="@color/title_tv_cancel_text_color"
        android:textSize="15sp"
        tools:text="@string/zfile_11_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/zfile_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/permission_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/zfile_cancel"
            android:textColor="@color/permission_btn_back" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/zfile_line_color" />

        <Button
            android:id="@+id/permission_btn_finish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/zfile_menu_down"
            android:textColor="@color/permission_btn_back" />

    </LinearLayout>

</LinearLayout>