<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/zfile_list_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/zfile_base_color"
        app:popupTheme="@style/ZFile_ToolbarPopupTheme"
        app:theme="@style/ZFile_ToolbarTheme"
        app:titleTextAppearance="@style/ZFile_ToolbarTitleTextStyle"
        tools:navigationIcon="@drawable/zfile_back">

        <TextView
            android:id="@+id/zfile_list_centerTitle"
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/zfile_title_text"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="@string/zfile_title" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/zfile_list_pathRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/zfile_default_divider_padding" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/zfile_list_refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/zfile_list_listRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_zfile_list_folder" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <FrameLayout
            android:id="@+id/zfile_list_emptyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="weather_no_data.json"
                app:lottie_loop="true" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/zfile_list_errorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:text="@string/zfile_permission_bad2"
                android:textColor="@color/zfile_no_permissions_color1"
                android:textSize="15sp" />

            <Button
                android:id="@+id/zfile_list_againBtn"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/zfile_permission_bad3"
                android:textColor="@color/zfile_no_permissions_color2" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>